Made the maps visualizer more oriented towards displaying single maps. In this version, the name of the displayed maps are named with their directory if necessary. This does not work yet for maps added after the first addition though.

--- a/mdt/data/qt_designs/maps_visualizer/MainWindow.ui
+++ b/mdt/data/qt_designs/maps_visualizer/MainWindow.ui
@@ -156,7 +156,7 @@
              <item>
               <widget class="QCheckBox" name="auto_rendering">
                <property name="text">
-                <string>Auto render</string>
+                <string>Auto redraw</string>
                </property>
               </widget>
              </item>
