--- a/mdt/data/qt_designs/model_fit/fit_model_tab.ui
+++ b/mdt/data/qt_designs/model_fit/fit_model_tab.ui
@@ -69,39 +69,106 @@
      <property name="horizontalSpacing">
       <number>10</number>
      </property>
-     <item row="4" column="0" colspan="3">
-      <widget class="Line" name="line_3">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
+     <item row="5" column="1">
+      <widget class="QComboBox" name="modelSelection"/>
+     </item>
+     <item row="1" column="2">
+      <widget class="QLabel" name="label_5">
+       <property name="font">
+        <font>
+         <italic>true</italic>
+        </font>
+       </property>
+       <property name="text">
+        <string>(Select your brain mask, see tab &quot;Generate brain mask&quot;)</string>
        </property>
       </widget>
      </item>
-     <item row="0" column="1">
-      <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <item row="3" column="0">
+      <widget class="QLabel" name="label_13">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="text">
+        <string>Select output folder:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="0">
+      <widget class="QLabel" name="label_10">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="text">
+        <string>Select protocol file:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="2">
+      <widget class="QLabel" name="label_14">
+       <property name="font">
+        <font>
+         <italic>true</italic>
+        </font>
+       </property>
+       <property name="text">
+        <string>(Defaults to &quot;output/&lt;mask_name&gt;&quot; in the DWI directory)</string>
+       </property>
+      </widget>
+     </item>
+     <item row="10" column="1">
+      <layout class="QHBoxLayout" name="horizontalLayout_4">
+       <property name="spacing">
+        <number>10</number>
+       </property>
        <item>
-        <widget class="QPushButton" name="selectDWI">
+        <widget class="QPushButton" name="additionalDataButton">
          <property name="text">
-          <string>Browse</string>
+          <string>Additional data</string>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QLineEdit" name="selectedDWI">
+        <widget class="QPushButton" name="optimizationOptionsButton">
          <property name="text">
-          <string/>
+          <string>Optimization options</string>
          </property>
         </widget>
+       </item>
+       <item>
+        <spacer name="horizontalSpacer_2">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
        </item>
       </layout>
      </item>
-     <item row="0" column="0">
-      <widget class="QLabel" name="label_6">
+     <item row="10" column="2">
+      <widget class="QLabel" name="label_17">
+       <property name="font">
+        <font>
+         <italic>true</italic>
+        </font>
+       </property>
        <property name="text">
-        <string>Select DWI:</string>
+        <string>(Additional settings)</string>
        </property>
       </widget>
      </item>
-     <item row="6" column="0" colspan="3">
+     <item row="9" column="0" colspan="3">
       <widget class="Line" name="line_4">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
@@ -158,58 +225,37 @@
        </property>
       </widget>
      </item>
-     <item row="5" column="1">
-      <widget class="QComboBox" name="modelSelection"/>
-     </item>
-     <item row="1" column="2">
-      <widget class="QLabel" name="label_5">
-       <property name="font">
-        <font>
-         <italic>true</italic>
-        </font>
-       </property>
+     <item row="0" column="0">
+      <widget class="QLabel" name="label_6">
        <property name="text">
-        <string>(Select your brain mask, see tab &quot;Generate brain mask&quot;)</string>
+        <string>Select DWI:</string>
        </property>
       </widget>
      </item>
-     <item row="3" column="0">
-      <widget class="QLabel" name="label_13">
-       <property name="minimumSize">
-        <size>
-         <width>0</width>
-         <height>0</height>
-        </size>
-       </property>
-       <property name="text">
-        <string>Select output folder:</string>
+     <item row="4" column="0" colspan="3">
+      <widget class="Line" name="line_3">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
        </property>
       </widget>
      </item>
-     <item row="2" column="0">
-      <widget class="QLabel" name="label_10">
-       <property name="minimumSize">
-        <size>
-         <width>0</width>
-         <height>0</height>
-        </size>
-       </property>
-       <property name="text">
-        <string>Select protocol file:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="2">
-      <widget class="QLabel" name="label_14">
-       <property name="font">
-        <font>
-         <italic>true</italic>
-        </font>
-       </property>
-       <property name="text">
-        <string>(Defaults to &quot;output/&lt;mask_name&gt;&quot; in the DWI directory)</string>
-       </property>
-      </widget>
+     <item row="0" column="1">
+      <layout class="QHBoxLayout" name="horizontalLayout_2">
+       <item>
+        <widget class="QPushButton" name="selectDWI">
+         <property name="text">
+          <string>Browse</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLineEdit" name="selectedDWI">
+         <property name="text">
+          <string/>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </item>
      <item row="3" column="1">
       <layout class="QHBoxLayout" name="horizontalLayout_7">
@@ -277,27 +323,59 @@
        </item>
       </layout>
      </item>
-     <item row="7" column="1">
-      <layout class="QHBoxLayout" name="horizontalLayout_4">
-       <property name="spacing">
-        <number>10</number>
+     <item row="8" column="0">
+      <widget class="QLabel" name="label_16">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>0</height>
+        </size>
        </property>
+       <property name="text">
+        <string>Select cascade:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="0">
+      <widget class="QLabel" name="label_19">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="text">
+        <string>Use cascaded fit:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="1">
+      <layout class="QHBoxLayout" name="horizontalLayout_8">
        <item>
-        <widget class="QPushButton" name="additionalDataButton">
+        <widget class="QRadioButton" name="useCascades">
          <property name="text">
-          <string>Additional data</string>
+          <string>Yes</string>
          </property>
+         <property name="checked">
+          <bool>true</bool>
+         </property>
+         <attribute name="buttonGroup">
+          <string notr="true">cascadedFitButtonGroup</string>
+         </attribute>
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="optimizationOptionsButton">
+        <widget class="QRadioButton" name="noCascades">
          <property name="text">
-          <string>Optimization options</string>
+          <string>No</string>
          </property>
+         <attribute name="buttonGroup">
+          <string notr="true">cascadedFitButtonGroup</string>
+         </attribute>
         </widget>
        </item>
        <item>
-        <spacer name="horizontalSpacer_2">
+        <spacer name="horizontalSpacer_3">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
@@ -311,15 +389,26 @@
        </item>
       </layout>
      </item>
-     <item row="7" column="2">
-      <widget class="QLabel" name="label_17">
+     <item row="8" column="1">
+      <widget class="QComboBox" name="cascadeSelection"/>
+     </item>
+     <item row="6" column="0" colspan="3">
+      <widget class="Line" name="line_5">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="2" rowspan="2">
+      <widget class="QLabel" name="label_18">
        <property name="font">
         <font>
          <italic>true</italic>
         </font>
        </property>
        <property name="text">
-        <string>(Additional settings)</string>
+        <string>(Initializes your chosen model using parameter estimates
+of simpler model estimates)</string>
        </property>
       </widget>
      </item>
@@ -399,4 +488,7 @@
  </tabstops>
  <resources/>
  <connections/>
+ <buttongroups>
+  <buttongroup name="cascadedFitButtonGroup"/>
+ </buttongroups>
 </ui>
