Updates to the documentation

--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -1,5 +1,7 @@
 .toctree-l1{
-    padding-top:10px;
+    padding-top:1px;
+    list-style: circle;
+    font-family: sans-serif;
 }
 
 .toctree-l1:first-child {
@@ -9,6 +11,23 @@
 p + ul {
     margin-top: 0px;
     margin-bottom:15px;
+}
+
+div.sphinxsidebar ul{
+    margin: 10px 0 0 15px;
+}
+
+div.sphinxsidebar ul.extra_sidebar_items{
+    margin-top:3px;
+}
+
+div.sphinxsidebar{
+    width: 240px;
+    font-size: 13px;
+}
+
+div.sphinxsidebar a{
+    border-bottom: none;
 }
 
 div.body p{
@@ -33,7 +52,7 @@ div.body h3{
 }
 
 #table-of-contents > ul > li{
-    margin-top:15px;
+    margin-top:8px;
 }
 
 #table-of-contents > ul > li:first-child{
@@ -42,4 +61,12 @@ div.body h3{
 
 .caption-text{
     font-style:italic;
+}
+
+#searchbox{
+    margin-top: 15px;
+}
+
+#searchbox h3{
+    font-size: 1em;
 }
