--- a/mdt/data/qt_designs/maps_visualizer/MapSpecificOptions.ui
+++ b/mdt/data/qt_designs/maps_visualizer/MapSpecificOptions.ui
@@ -241,28 +241,22 @@
          <property name="verticalSpacing">
           <number>3</number>
          </property>
-         <item row="1" column="0">
+         <item row="2" column="0">
           <widget class="QLabel" name="label_3">
            <property name="text">
             <string>Colorbar label:</string>
            </property>
           </widget>
          </item>
-         <item row="0" column="1">
-          <widget class="QLineEdit" name="map_title"/>
-         </item>
-         <item row="2" column="1">
+         <item row="3" column="1">
           <widget class="QComboBox" name="colormap"/>
          </item>
-         <item row="2" column="0">
+         <item row="3" column="0">
           <widget class="QLabel" name="label_9">
            <property name="text">
             <string>Colormap:</string>
            </property>
           </widget>
-         </item>
-         <item row="1" column="1">
-          <widget class="QLineEdit" name="data_colorbar_label"/>
          </item>
          <item row="0" column="0">
           <widget class="QLabel" name="label_21">
@@ -270,6 +264,12 @@
             <string>Title (latex):</string>
            </property>
           </widget>
+         </item>
+         <item row="0" column="1">
+          <widget class="QPlainTextEdit" name="map_title"/>
+         </item>
+         <item row="2" column="1">
+          <widget class="QPlainTextEdit" name="data_colorbar_label"/>
          </item>
         </layout>
        </widget>
@@ -606,8 +606,6 @@
   </customwidget>
  </customwidgets>
  <tabstops>
-  <tabstop>map_title</tabstop>
-  <tabstop>data_colorbar_label</tabstop>
   <tabstop>colormap</tabstop>
   <tabstop>use_data_scale_min</tabstop>
   <tabstop>use_data_scale_max</tabstop>
