Renamed 'problem_data' to 'input_data', 'DMRIProblemData' to 'InputDataDMRI' and all other possible renamings. This also deprecates the function  since it has been renamed to .

--- a/mdt/data/qt_designs/model_fit/optimization_extra_data_add_static_map_dialog.ui
+++ b/mdt/data/qt_designs/model_fit/optimization_extra_data_add_static_map_dialog.ui
@@ -39,7 +39,7 @@
         </font>
        </property>
        <property name="text">
-        <string>Add an additional static map to the problem data</string>
+        <string>Add an additional static map to the input data</string>
        </property>
       </widget>
      </item>
