--- a/mdt/data/qt_designs/maps_visualizer/MapSpecificOptions.ui
+++ b/mdt/data/qt_designs/maps_visualizer/MapSpecificOptions.ui
@@ -7,30 +7,21 @@
     <x>0</x>
     <y>0</y>
     <width>648</width>
-    <height>584</height>
+    <height>590</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <property name="leftMargin">
-    <number>0</number>
-   </property>
-   <property name="topMargin">
-    <number>0</number>
-   </property>
-   <property name="rightMargin">
-    <number>0</number>
-   </property>
-   <property name="bottomMargin">
-    <number>0</number>
-   </property>
    <property name="horizontalSpacing">
     <number>0</number>
    </property>
    <property name="verticalSpacing">
     <number>10</number>
+   </property>
+   <property name="margin">
+    <number>0</number>
    </property>
    <item row="1" column="0">
     <widget class="CollapsablePanel" name="frame_3">
@@ -44,16 +35,7 @@
       <property name="spacing">
        <number>0</number>
       </property>
-      <property name="leftMargin">
-       <number>0</number>
-      </property>
-      <property name="topMargin">
-       <number>0</number>
-      </property>
-      <property name="rightMargin">
-       <number>0</number>
-      </property>
-      <property name="bottomMargin">
+      <property name="margin">
        <number>0</number>
       </property>
       <item>
@@ -114,12 +96,12 @@
            <item row="0" column="0">
             <widget class="QLabel" name="label">
              <property name="text">
-              <string>Min:</string>
+              <string>Max:</string>
              </property>
             </widget>
            </item>
            <item row="1" column="2">
-            <widget class="QCheckBox" name="use_data_scale_max">
+            <widget class="QCheckBox" name="use_data_scale_min">
              <property name="text">
               <string/>
              </property>
@@ -128,12 +110,12 @@
            <item row="1" column="0">
             <widget class="QLabel" name="label_5">
              <property name="text">
-              <string>Max:</string>
+              <string>Min:</string>
              </property>
             </widget>
            </item>
            <item row="0" column="2">
-            <widget class="QCheckBox" name="use_data_scale_min">
+            <widget class="QCheckBox" name="use_data_scale_max">
              <property name="text">
               <string/>
              </property>
@@ -157,10 +139,10 @@
             </widget>
            </item>
            <item row="0" column="1">
-            <widget class="ScientificNumberScroller" name="data_scale_min" native="true"/>
+            <widget class="ScientificNumberScroller" name="data_scale_max" native="true"/>
            </item>
            <item row="1" column="1">
-            <widget class="ScientificNumberScroller" name="data_scale_max" native="true"/>
+            <widget class="ScientificNumberScroller" name="data_scale_min" native="true"/>
            </item>
           </layout>
          </item>
@@ -182,16 +164,7 @@
       <property name="spacing">
        <number>0</number>
       </property>
-      <property name="leftMargin">
-       <number>0</number>
-      </property>
-      <property name="topMargin">
-       <number>0</number>
-      </property>
-      <property name="rightMargin">
-       <number>0</number>
-      </property>
-      <property name="bottomMargin">
+      <property name="margin">
        <number>0</number>
       </property>
       <item>
@@ -302,16 +275,7 @@
       <property name="spacing">
        <number>0</number>
       </property>
-      <property name="leftMargin">
-       <number>0</number>
-      </property>
-      <property name="topMargin">
-       <number>0</number>
-      </property>
-      <property name="rightMargin">
-       <number>0</number>
-      </property>
-      <property name="bottomMargin">
+      <property name="margin">
        <number>0</number>
       </property>
       <item>
@@ -371,7 +335,7 @@
            </property>
           </widget>
          </item>
-         <item row="2" column="0">
+         <item row="3" column="0">
           <widget class="QLabel" name="label_11">
            <property name="text">
             <string>Minimum:</string>
@@ -385,22 +349,8 @@
            </property>
           </widget>
          </item>
-         <item row="3" column="0">
-          <widget class="QLabel" name="label_26">
-           <property name="text">
-            <string>Maximum:</string>
-           </property>
-          </widget>
-         </item>
-         <item row="2" column="1">
-          <widget class="QLabel" name="info_minimum">
-           <property name="text">
-            <string>TextLabel</string>
-           </property>
-          </widget>
-         </item>
          <item row="3" column="1">
-          <widget class="QLabel" name="info_maximum">
+          <widget class="QLabel" name="info_minimum">
            <property name="text">
             <string>TextLabel</string>
            </property>
@@ -420,15 +370,29 @@
            </property>
           </widget>
          </item>
-         <item row="4" column="0">
+         <item row="5" column="0">
           <widget class="QLabel" name="label_27">
            <property name="text">
             <string>Has NaNs:</string>
            </property>
           </widget>
          </item>
-         <item row="4" column="1">
+         <item row="5" column="1">
           <widget class="QLabel" name="info_has_nan">
+           <property name="text">
+            <string>TextLabel</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="0">
+          <widget class="QLabel" name="label_26">
+           <property name="text">
+            <string>Maximum:</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="1">
+          <widget class="QLabel" name="info_maximum">
            <property name="text">
             <string>TextLabel</string>
            </property>
@@ -452,16 +416,7 @@
       <property name="spacing">
        <number>0</number>
       </property>
-      <property name="leftMargin">
-       <number>0</number>
-      </property>
-      <property name="topMargin">
-       <number>0</number>
-      </property>
-      <property name="rightMargin">
-       <number>0</number>
-      </property>
-      <property name="bottomMargin">
+      <property name="margin">
        <number>0</number>
       </property>
       <item>
@@ -512,17 +467,20 @@
           <number>3</number>
          </property>
          <item row="0" column="0">
-          <layout class="QGridLayout" name="gridLayout_9" columnstretch="0,1,0">
+          <layout class="QGridLayout" name="gridLayout_9" columnstretch="0,0,0">
            <property name="topMargin">
             <number>0</number>
            </property>
            <property name="bottomMargin">
             <number>0</number>
            </property>
+           <item row="1" column="1">
+            <widget class="ScientificNumberScroller" name="data_clipping_min" native="true"/>
+           </item>
            <item row="0" column="0">
             <widget class="QLabel" name="label_7">
              <property name="text">
-              <string>Min:</string>
+              <string>Max:</string>
              </property>
             </widget>
            </item>
@@ -534,7 +492,7 @@
             </widget>
            </item>
            <item row="0" column="2">
-            <widget class="QCheckBox" name="use_data_clipping_min">
+            <widget class="QCheckBox" name="use_data_clipping_max">
              <property name="text">
               <string/>
              </property>
@@ -551,24 +509,21 @@
             </widget>
            </item>
            <item row="1" column="2">
-            <widget class="QCheckBox" name="use_data_clipping_max">
+            <widget class="QCheckBox" name="use_data_clipping_min">
              <property name="text">
               <string/>
              </property>
             </widget>
            </item>
+           <item row="0" column="1">
+            <widget class="ScientificNumberScroller" name="data_clipping_max" native="true"/>
+           </item>
            <item row="1" column="0">
             <widget class="QLabel" name="label_8">
              <property name="text">
-              <string>Max:</string>
+              <string>Min:</string>
              </property>
             </widget>
-           </item>
-           <item row="0" column="1">
-            <widget class="ScientificNumberScroller" name="data_clipping_min" native="true"/>
-           </item>
-           <item row="1" column="1">
-            <widget class="ScientificNumberScroller" name="data_clipping_max" native="true"/>
            </item>
           </layout>
          </item>
@@ -607,11 +562,11 @@
  </customwidgets>
  <tabstops>
   <tabstop>colormap</tabstop>
-  <tabstop>use_data_scale_min</tabstop>
   <tabstop>use_data_scale_max</tabstop>
+  <tabstop>use_data_scale_min</tabstop>
   <tabstop>data_set_use_scale</tabstop>
-  <tabstop>use_data_clipping_min</tabstop>
   <tabstop>use_data_clipping_max</tabstop>
+  <tabstop>use_data_clipping_min</tabstop>
   <tabstop>data_set_use_clipping</tabstop>
  </tabstops>
  <resources/>
