--- a/mdt/data/qt_designs/model_fit/about_dialog.ui
+++ b/mdt/data/qt_designs/model_fit/about_dialog.ui
@@ -92,7 +92,7 @@
           </font>
          </property>
          <property name="text">
-          <string>Maastricht Diffusion Toolbox</string>
+          <string>Microstructure Diffusion Toolbox</string>
          </property>
         </widget>
        </item>
@@ -117,7 +117,7 @@
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Droid Sans'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:11pt;&quot;&gt;Version: {version}&lt;/span&gt;&lt;/p&gt;
-&lt;p style=&quot; margin-top:20px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:11pt;&quot;&gt;The Maastricht Diffusion Toolbox is a model recovery toolbox primarily meant for diffusion MRI analysis.&lt;/span&gt;&lt;/p&gt;
+&lt;p style=&quot; margin-top:20px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:11pt;&quot;&gt;The Microstructure Diffusion Toolbox is a model recovery toolbox primarily meant for diffusion MRI analysis.&lt;/span&gt;&lt;/p&gt;
 &lt;p style=&quot; margin-top:20px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:11pt;&quot;&gt;Software development by Robbert Harms, under the (Phd) supervision of Alard Roebroeck, at Maastricht University.&lt;/span&gt;&lt;/p&gt;
 &lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:11pt;&quot;&gt;Contributors:&lt;/span&gt;&lt;/p&gt;
 &lt;ul style=&quot;margin-top: 0px; margin-bottom: 0px; margin-left: 0px; margin-right: 0px; -qt-list-indent: 1;&quot;&gt;&lt;li style=&quot; font-size:11pt;&quot; style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Robbert Harms&lt;/li&gt;
